# sgcu65-backend-assignment

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2022-06-27-174624_tasks/: up.sql
migrations/2022-06-27-174644_users/: up.sql
migrations/2022-06-28-110633_change_start_number/: down.sql  up.sql
migrations/2022-06-30-183319_revamp/: down.sql  up.sql
src/: db.rs  main.rs  model.rs  schema.rs
src/model/: assign.rs  mod.rs  task.rs  team.rs  test.rs  user.rs
src/model/op/: accept_task.rs  assign.rs  assign_user.rs  mod.rs
src/model/test/: accept_task.rs  assign.rs  assign_user.rs  mod.rs  task.rs  team.rs  user.rs
src/route/: accept_task.rs  assign.rs  assign_user.rs  mod.rs  task.rs  task_guard.rs  team.rs  user.rs  user_guard.rs
tests/: README.md  assign_test.py  helper.py  task_test.py  test.py  user_test.py
