[package]
name = "sgcu65-backend-assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"